aws/aws_vpc_msk/vpc.tf
resource "aws_vpc" "msk_vpc" {
  cidr_block = var.vpc_cidr
  tags = merge(
    local.common-tags,
    map(
      "Name", "msk-${lower(var.environment)}-vpc",
      "Description", "VPC for creating MSK resources",
    )
    , {
      yor_trace = "a18f46dd-48ae-442e-ba4d-070ac5b3d4c1"
  })
}
